@@ -23,6 +23,10 @@ Used in concert with https://github.com/captainflasmr/Emacs-vanilla
 
 * Whats New
 
+** <2025-04-13>
+
+Added =elfeed= replacement with =newsticker=
+
 ** <2025-04-12>
 
 Added =csv-parse-buffer=/package csv replacement
@@ -90,6 +94,37 @@ Here is a kanban of the features that will be (hopefully) converted to core/enha
 * Roadmap                                                           :roadmap:
 
 Here are the features that will be (hopefully) converted to core.
+
+** DONE elfeed
+
+Well this is a bit of a turn up!, wandering around the general Emacs feeds and someone mentions newsticker as an =elfeed= replacement, and guess what!, it is built-in.  Well lets see how this goes, as it turns out the syntax is pretty similar:
+
+#+begin_src elisp
+(use-package newsticker
+  :bind
+  (:map newsticker-treeview-mode-map
+        ("n" . newsticker-treeview-next-item)
+        ("p" . newsticker-treeview-prev-item)
+        ("m" . newsticker-treeview-mark-item))
+  :custom
+  (newsticker-retrieval-interval 3600)  ; Update every hour
+  (newsticker-treeview-treeview-face-fn 'ignore)
+  (newsticker-treeview-date-format "%Y-%m-%d %H:%M")
+  (newsticker-url-list
+   '(("Emacs Dyer Dwelling"
+      "https://www.emacs.dyerdwelling.family/index.xml" nil nil nil)))
+  :config
+  (newsticker-start)
+  (defun my-newsticker-treeview-custom-filter ()
+    "Custom filter to show items from the last month."
+    (let ((one-month-ago (time-subtract (current-time) (days-to-time 30))))
+      (lambda (item)
+        (time-less-p one-month-ago (newsticker--age item)))))
+  (setq newsticker-treeview-filter-functions (list #'my-newsticker-treeview-custom-filter)))
+
+(define-key my-jump-keymap (kbd "t") #'newsticker-show-news)
+
+#+end_src
 
 ** DONE csv parsing
 
